syntax = "proto3";

package threat_protection.service.dashboard_service.v1;

// This is a consumer service for recording malicious alerts
// For dashboard purposes we will have a separate service to retrieve these events.
option java_outer_classname = "DashboardServiceProto";
option java_package = "threat_protection.service.dashboard_service.v1";

message MaliciousRequest {
    string id = 1;
    string actor = 2;
    string filter_id = 3;
    string url = 4;
    string method = 5;
    string orig = 6;
    string ip = 7;
    string country = 8;
    int64 timestamp = 9;
}

message ListMaliciousRequestsResponse {
    repeated MaliciousRequest malicious_requests = 1;
    int32 total = 2;
    int32 page = 3;
}

message ListMaliciousRequestsRequest {
    // The number of alerts to return
    int32 limit = 3;
    optional int32 page = 4;
}

service DashboardService {
    rpc ListMaliciousRequests(ListMaliciousRequestsRequest) returns (ListMaliciousRequestsResponse);
}